# submarine

./: .gitignore  README.md  bench_ln.py  bench_modal.py  check_device.py  custom_ln.py  eager.py  justfile  kp.py  layernorm_kernel.ptx  main.py  measure_bw.py  modal.py  ncu.py  operation.py  pyproject.toml  results.html  ruff.toml  sanity.py  sanity_fa.py  sanity_gemm.py  sanity_ln.py  sanity_rms.py  sanity_softmax.py  scratch.py  submarine.py  tc.py  test.py  ttrans.py  tutorial_ref.py
benches/: benchmark.py  layernorm.py
cuda_ramp/: .clangd  softmax.cu
cuda_ramp/ln/: ln.cu  ln.cuh  ln.py
cuda_ramp/soft/: softmax.py
cute_ramp/: README.md  broken.py  elem_add.py  layout_gym.py  my_softmax.ptx  my_softmax.sass  p0.py  printing.py  softmax.py  triton_softmax.ptx  triton_softmax.sass  tv_demo.py  tv_layout.py  vec_elem_add.py  zip_vs_tiled.py
marine_ops/: cross_entropy.py  fa.py  fused_cross_entropy.py  gemm.py  layernorm.py  marine_gemm.py  marine_ln.py  marine_softmax.py  rmsnorm.py  rope.py  softmax.py
operations/: fa.py  gemm.py  layernorm.py  operation.py  softmax.py
sanity/: fused_cross_entropy.py  sanity_cross_entropy.py  sanity_fa.py  sanity_ln.py  sanity_rms.py  sanity_rope.py  sanity_softmax.py
utils/: device_stats.py
