[project]
name = "submarine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cuda-bench[cu12]>=0.2.0",
    "cute-viz",
    "cyclopts>=4.4.4",
    "hypothesis>=6.149.0",
    "liger-kernel-nightly>=0.6.4.dev20260102122147",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "nvidia-cutlass-dsl>=4.3.5",
    "pandas>=2.3.3",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "triton>=3.5.1",
]

[tool.uv.sources]
cute-viz = { git = "https://github.com/NTT123/cute-viz.git" }

[tool.setuptools.packages.find]
include = ["marine_ops*", "operations*"]
